--- a/css/styles.css
+++ b/css/styles.css
@@ -155,13 +155,10 @@ a:visited {
 
 /* INTERESTS */
 .interests-icon{
-  display: block;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  margin-left: auto;
-  margin-right: auto;
   color: white;
-  font-size: 3rem;
+  text-align: center;
 }
 .interests-p{
   text-align: justify;
