--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: var(--main-2-color);
   color: var(--trans-light-color);
@@ -11,7 +15,8 @@ p {
   margin-bottom: 0;
 }
 
-mark, .mark {
+mark,
+.mark {
   color: white;
   background-color: transparent;
 }
@@ -20,7 +25,8 @@ a {
   color: var(--highlight-color);
 }
 
-a:hover, a:active {
+a:hover,
+a:active {
   color: var(--highlight-full-color);
 }
 
@@ -33,7 +39,8 @@ a:visited {
   color: var(--trans-dark-color);
 }
 
-.section-color-light mark, .section-color-light .mark {
+.section-color-light mark,
+.section-color-light .mark {
   color: var(--main-2-color);
   background-color: transparent;
 }
@@ -49,7 +56,7 @@ a:visited {
   min-height: 100vh;
 }
 
-.header-info{
+.header-info {
   text-align: center;
   display: flex;
   align-items: center;
@@ -58,7 +65,7 @@ a:visited {
   height: 100%;
 }
 
-.profile-picture{
+.profile-picture {
   margin: 3%;
   max-width: 40%;
   max-height: 40%;
@@ -76,13 +83,13 @@ a:visited {
   color: black;
 }
 
-.header-introduction{
+.header-introduction {
   display: flex;
   align-items: center;
   height: 100%;
 }
 
-.introduction{
+.introduction {
   text-align: justify;
   max-width: 35rem;
   margin-left: auto;
@@ -112,7 +119,7 @@ a:visited {
 }
 
 /* SKILLS */
-.skills-row{
+.skills-row {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -150,13 +157,13 @@ a:visited {
 }
 
 /* INTERESTS */
-.interests-icon{
+.interests-icon {
   margin-top: 1rem;
   margin-bottom: 1rem;
   color: white;
   text-align: center;
 }
-.interests-p{
+.interests-p {
   text-align: justify;
 }
 
@@ -176,7 +183,7 @@ a:visited {
 .resume-section {
   display: flex;
   align-items: center;
-  padding: 5%
+  padding: 5%;
 }
 
 .section-content {
