--- a/css/font-size.css
+++ b/css/font-size.css
@@ -1,20 +1,22 @@
 /* Copyright © 2020 Árpád Gábor Bondor */
 
 /* XS ~ -80% */
-body { font-size: 0.8rem; }
-h1, .h1{ font-size: 2rem; }
-h2, .h2{ font-size: 1.6rem; }
-h3, .h3{ font-size: 1.4rem; }
-h4, .h4{ font-size: 1.2rem; }
-h5, .h5{ font-size: 1rem; }
-h6, .h6{ font-size: 0.8rem; }
-/* NAVBAR */
-.navbar{ font-size: 0.8rem; }
-.navbar-brand { font-size: 1rem; }
-/* ICONS */
-.icon-2rem { font-size: 1.6rem; }
-.icon-2-5rem { font-size: 2rem; }
-.icon-3rem { font-size: 2.4rem; }
+@media screen {
+  body { font-size: 0.8rem; }
+  h1, .h1{ font-size: 2rem; }
+  h2, .h2{ font-size: 1.6rem; }
+  h3, .h3{ font-size: 1.4rem; }
+  h4, .h4{ font-size: 1.2rem; }
+  h5, .h5{ font-size: 1rem; }
+  h6, .h6{ font-size: 0.8rem; }
+  /* NAVBAR */
+  .navbar{ font-size: 0.8rem; }
+  .navbar-brand { font-size: 1rem; }
+  /* ICONS */
+  .icon-2rem { font-size: 1.6rem; }
+  .icon-2-5rem { font-size: 2rem; }
+  .icon-3rem { font-size: 2.4rem; }
+}
 
 /* SM ~ 90% */
 @media screen and (min-width: 576px) {
